--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "bootstrap-icons": "^1.13.1",
     "gsap": "^3.13.0",
     "next": "^15.3.3",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.2.8",
     "tsparticles": "^2.12.0",
@@ -30,6 +32,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
